--- a/src/main/resources/templates/messageForm.html
+++ b/src/main/resources/templates/messageForm.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA_Compatible" content="IE=edge" />
     <title>Todo</title>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width-device-width, initial-scale=1,shrink-to-fit=no">
+    <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
@@ -15,25 +17,30 @@
             "sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity=
             "sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 </head>
 <body>
+<img srs = url("https://imgur.com/a/Kjz0WSY")>
 <form action="#" th:action="@{/process}" th:object="${message}" method="post">
 
     <input type="hidden" th:field="*{id}" />
 
-    Content :<input type="text" th:field="*{content}" />
-    <span th:if="${#fields.hasErrors('content')}"
-          th:errors="*{content}"></span><br />
+    <div class="alert alert-primary" role="alert">MESSAGE</div>
 
-    PostedDate :<input type="number" th:field="*{postedDate}" />
-    <span th:if="${#fields.hasErrors('postedDate')}"
-          th:errors="*{postedDate}"></span><br />
+        <h2>Content :<input type="text" th:field="*{content}" /></h2>
+        <span th:if="${#fields.hasErrors('content')}"
+              th:errors="*{content}"></span><br />
 
-    SentBy :<input type="text" th:field="*{sentBy}" />
-    <span th:if="${#fields.hasErrors('sentBy')}"
-          th:errors="*{sentBy}"></span><br />
+        <h3>Date :<input type="date" th:field="*{postedDate}" /> </h3>
+        <span th:if="${#fields.hasErrors('postedDate')}"
+              th:errors="*{postedDate}"></span><br />
 
-    <input type="submit" value="Submit" />
+        <h4>Sent By :<input type="text" th:field="*{sentBy}" /> </h4>
+        <span th:if="${#fields.hasErrors('sentBy')}"
+              th:errors="*{sentBy}"></span><br />
+
+        <h5> <input class="btn btn-primary btn-lg" type="file" name="file" /><br/><br/>
+            <input class="btn btn-primary btn-lg" type="submit" value="Submit" /></h5>
 
 </form>
 
